# learning_open_gl

./: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shared_src/include/: filesystem_utils.h  glfw_wrapper.h  shaders.h  state.hpp  vertices.h
shared_src/src/: filesystem_utils.cpp  glfw_wrapper.cpp  shaders.cpp  vertices.cpp
tutors/advanced_shaders/: CMakeLists.txt
tutors/advanced_shaders/shaders/: dynamic_fragment.glsl  fragment.glsl  vertex.glsl
tutors/advanced_shaders/src/: main.cpp
tutors/basic_draw/: CMakeLists.txt
tutors/basic_draw/src/: main.cpp
tutors/element_buffer/: CMakeLists.txt
tutors/element_buffer/src/: main.cpp
tutors/template/: CMakeLists.txt
